--- a/app.json
+++ b/app.json
@@ -5,6 +5,6 @@
   "logo": "https://node-js-sample.herokuapp.com/node.png",
   "keywords": ["node", "express", "static"],
   "scripts": {
-    "postdeploy": "node reRouting.js"
+    "start": "node reRouting.js"
   }
 }
