--- a/app.json
+++ b/app.json
@@ -3,8 +3,5 @@
   "description": "Trading Cloud for the CryptoControl Terminal",
   "repository": "https://github.com/Sagar133/MySuperCoolNodeApp",
   "logo": "https://node-js-sample.herokuapp.com/node.png",
-  "keywords": ["node", "express", "static"],
-  "scripts": {
-    "start": "node reRouting.js"
-  }
+  "keywords": ["node", "express", "static"]
 }
